--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,9 @@
 </head>
 
 <body>
-<div class="range-slider-container"></div>
-<div class="test"></div>
+<div class="range-slider-container container-1"></div>
+<div class="range-slider-container container-2"></div>
+<div class="range-slider-container container-3"></div>
 
 
 </body>
