style(mainlayout): add grid layout with different plugin instances to show kinds of options
also add option to disable fill, enable round tooltip

--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,18 @@
 </head>
 
 <body>
-<div class="range-slider-container container-1"></div>
-<div class="range-slider-container container-2"></div>
-<div class="range-slider-container container-3"></div>
+  <main class="main">
+    <div class="range-slider-container container-1"></div>
+    <div class="range-slider-container container-2"></div>
+    <div class="range-slider-container container-3"></div>
+    <div class="range-slider-container container-4"></div>
+    <div class="range-slider-container container-5"></div>
+    <div class="range-slider-container container-6"></div>
+    <div class="range-slider-container container-7"></div>
+    <div class="range-slider-container container-8"></div>
+    <div class="range-slider-container container-9"></div>
+    
+  </main>
 
 
 </body>
