feat(updateoptions): add external updateOptions function on plugin instance to change settings
change algorithm of plugin classes initialization to make it possible to reset with changed options
from outside function on plugin instance; fix bugs appeared on double instancing

BREAKING CHANGE: each class contructor code migrated partially to init method, wich called with
updateOptions external method

--- a/src/index.html
+++ b/src/index.html
@@ -11,16 +11,87 @@
 
 <body>
   <main class="main">
-    <div class="range-slider-container container-1"></div>
-    <div class="range-slider-container container-2"></div>
-    <div class="range-slider-container container-3"></div>
-    <div class="range-slider-container container-4"></div>
-    <div class="range-slider-container container-5"></div>
-    <div class="range-slider-container container-6"></div>
-    <div class="range-slider-container container-7"></div>
-    <div class="range-slider-container container-8"></div>
-    <div class="range-slider-container container-9"></div>
-    
+    <div class="range-slider-display  range-slider-display -1">
+      <div class="range-slider-container container-1"></div>
+
+      <div class="range-slider-controls controls-container-1">
+
+        <form action="/" class="range-slider-controls__form">
+
+
+          <div class="range-slider-controls__control">
+            <label for="value">value</label>
+            <input type="text" name="value" class="range-slider-controls__input">
+          </div>
+
+          <div class="range-slider-controls__control"><label for="trackHeight">trackHeight</label>
+            <input type="text" name="trackHeight" class="range-slider-controls__input"></div>
+
+          <div class="range-slider-controls__control"> <label for="max">max</label>
+            <input type="text" name="max" class="range-slider-controls__input"></div>
+
+          <div class="range-slider-controls__control"><label for="step">step</label>
+            <input type="text" name="step" class="range-slider-controls__input"></div>
+
+          <div class="range-slider-controls__control"><label for="trackColor">trackColor</label>
+            <input type="text" name="trackColor" class="range-slider-controls__input"></div>
+
+          <div class="range-slider-controls__control">
+            <label for="tooltipColor">tooltipColor</label>
+            <input type="text" name="tooltipColor" class="range-slider-controls__input"></div>
+
+          <div class="range-slider-controls__control"><input type="button" class="range-slider-controls__button"
+              value="set options"></div>
+
+        </form>
+
+      </div>
+      <div class="burger">
+        <div class="burger-inner"><span></span></div>
+      </div>
+    </div>
+    <div class="range-slider-display  range-slider-display -2">
+      <div class="range-slider-container container-2"></div>
+      <div class="range-slider-controls controls-container-2"></div>
+    </div>
+
+    <div class="range-slider-display  range-slider-display -3">
+      <div class="range-slider-container container-3"></div>
+      <div class="range-slider-controls controls-container-3"></div>
+    </div>
+
+
+    <div class="range-slider-display  range-slider-display -4">
+      <div class="range-slider-container container-4"></div>
+      <div class="range-slider-controls controls-container-4"></div>
+    </div>
+
+    <div class="range-slider-display  range-slider-display -5">
+      <div class="range-slider-container container-5"></div>
+      <div class="range-slider-controls controls-container-5"></div>
+    </div>
+
+    <div class="range-slider-display  range-slider-display -6">
+      <div class="range-slider-container container-6"></div>
+      <div class="range-slider-controls controls-container-6"></div>
+    </div>
+
+    <div class="range-slider-display  range-slider-display -7">
+      <div class="range-slider-container container-7"></div>
+      <div class="range-slider-controls controls-container-7"></div>
+    </div>
+
+    <div class="range-slider-display  range-slider-display -8">
+      <div class="range-slider-container container-8"></div>
+      <div class="range-slider-controls controls-container-8"></div>
+    </div>
+
+    <div class="range-slider-display  range-slider-display -9">
+      <div class="range-slider-container container-9"></div>
+      <div class="range-slider-controls controls-container-9"></div>
+    </div>
+
+
   </main>
 
 
