feat(form-setoptions): add functionality to set options through a basic burger-popup form
change external and inner methods to save config instances to arr, retrieve id, look for an instance
to update options with formData object

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
       <div class="range-slider-controls controls-container-1">
 
-        <form action="/" class="range-slider-controls__form">
+        <form class="range-slider-controls__form">
 
 
           <div class="range-slider-controls__control">
@@ -40,8 +40,8 @@
             <label for="tooltipColor">tooltipColor</label>
             <input type="text" name="tooltipColor" class="range-slider-controls__input"></div>
 
-          <div class="range-slider-controls__control"><input type="button" class="range-slider-controls__button"
-              value="set options"></div>
+          <div class="range-slider-controls__control"><button class="range-slider-controls__button"
+              value="set options">set options</div>
 
         </form>
 
