fix(thumbpresenter,trackpresenter): fix bugs on wrong id thumbView assignment, improper startPoint
wrong ThumbView id assignment lead to false thumb behaviour, fix static method of id assignment;
improper  thumb container viewport position faults to drag thumb in vertical position: fix by
mediator startpoint retrieaval

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
         </div> -->
         <div class="range-slider-display__modify-button modify-button-1 active" data-value="1">modify</div>
       </div>
+
       <div class="range-slider-display  range-slider-display -2">
         <div class="range-slider-container container-2"></div>
         <div class="range-slider-display__modify-button modify-button-2" data-value="2">modify</div>
@@ -63,6 +64,26 @@
       <div class="range-slider-display  range-slider-display -9">
         <div class=" range-slider-container container-9"></div>
         <div class="range-slider-display__modify-button modify-button-9" data-value="9">modify</div>
+      </div>
+
+      <div class="range-slider-display  range-slider-display-10">
+        <div class=" range-slider-container container-10"></div>
+        <div class="range-slider-display__modify-button modify-button-10" data-value="10">modify</div>
+      </div>
+
+      <div class="range-slider-display  range-slider-display-11">
+        <div class=" range-slider-container container-11"></div>
+        <div class="range-slider-display__modify-button modify-button-11" data-value="11">modify</div>
+      </div>
+
+      <div class="range-slider-display  range-slider-display-12">
+        <div class=" range-slider-container container-12"></div>
+        <div class="range-slider-display__modify-button modify-button-12" data-value="12">modify</div>
+      </div>
+
+      <div class="range-slider-display  range-slider-display-13">
+        <div class=" range-slider-container container-13"></div>
+        <div class="range-slider-display__modify-button modify-button-13" data-value="13">modify</div>
       </div>
 
 
